# ageb-alignment

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  config.toml  cull_points.ipynb  package.json  pyproject.toml  test.ipynb  test.points  zones.json
ageb_alignment/: definitions.py  jobs.py  managers.py  partitions.py  replace_1990_with_2000.py  resources.py  types.py
ageb_alignment/assets/: built.py  census.py  differences.py  filter.py  gcp.py  manual.py  mapshaper.py  mesh.py  met_zones.py  metropoli.py  translate.py  zones.py
ageb_alignment/assets/census/: 1990.py  2000.py  2010_2020.py  __init__.py  inegi.py  iter.py  scince.py
ageb_alignment/assets/census_initial/: inegi.py  iter.py  scince.py
ageb_alignment/assets/census_test/: __init__.py
ageb_alignment/assets/framework/: __init__.py  agebs.py  agebs_initial.py  all.py  blocks.py  loc.py  municipalities.py  states.py
ageb_alignment/assets/gcp/: __init__.py  final.py  initial.py
ageb_alignment/assets/geometry/: 1990.py  2000.py  2010.py  2020.py  __init__.py  blocks.py  common.py  loc.py  mun.py  state.py
ageb_alignment/assets/georeferencing/: extend.py  gcp.py
ageb_alignment/assets/loading/: agebs.py  census.py  met_zones.py  metropoli.py
ageb_alignment/assets/mesh/: __init__.py  differences.py  merge.py  reproject.py
ageb_alignment/assets/translate/: 1990.py  2000.py  common.py
ageb_alignment/assets/zones/: __init__.py  extended.py  initial.py  manual.py  replaced.py  shaped.py  switched.py
ageb_alignment/configs/: replacement.py
ageb_alignment/configs/replacement/: __init__.py  replace_1990_with_2000.py  replace_1990_with_2010.py  replace_2000_with_2010.py
ageb_alignment/defs/: jobs.py  managers.py  resources.py
ageb_alignment/defs/assets/: built.py  gcp.py  (+2 more)
census_alignment/: definitions.py
census_alignment/assets/: filter.py  mapshaper.py
configs/: affine.toml  overlaps.toml  preferences.toml  remove_from_mun.toml  switches.toml  wanted_cols.json
configs/replacement/: 1990_2000.toml
dagster/: dagster.yaml
manual_files/framework_replace/: 2000.gpkg
(+95 files in other folders)
